enable dark mode Fixes #27

--- a/site/themes/infinity/static/assets/color.css
+++ b/site/themes/infinity/static/assets/color.css
@@ -1,25 +1,67 @@
 /* inspired by W3.CSS color themes */
-
 .light-theme,
-.light-theme:hover
-{
-    color: #000000 !important; 
-    background-color: #fff !important;
+.light-theme:hover {
+  color: #000000 !important;
+  background-color: #fff !important;
 }
 
-.light-theme-hover:hover
-{
-    color: #000000 !important;
-    background-color: #ccc !important;
+.light-theme-hover:hover {
+  color: #000000 !important;
+  background-color: #ccc !important;
 }
 
+@media (prefers-color-scheme: dark) {
 
-.dark-theme,
-.dark-theme:hover {
+  .light-theme,
+  .light-theme:hover {
     color: #ffffff !important;
     background-color: #000000 !important;
-}
-.dark-theme-hover:hover {
-    color: #ffffff;
-    background-color: #333;
+  }
+
+  .light-theme-hover:hover {
+    color: #ffffff !important;
+    background-color: #333 !important;
+  }
+
+  .w3-card,
+  .w3-card-2 {
+    box-shadow: 0 2px 5px 0 rgba(255, 255, 255, 0.16), 0 2px 10px 0 rgba(255, 255, 255, 0.12);
+  }
+
+  .w3-card-4,
+  .w3-hover-shadow:hover {
+    box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.2), 0 4px 20px 0 rgba(255, 255, 255, 0.19);
+  }
+
+  .w3-bordered tr,
+  .w3-table-all tr {
+    border-bottom: 1px solid #222;
+  }
+
+  /* .w3-leftbar {
+    border-left: 6px solid #444 !important
+  } */
+
+  .w3-disabled,
+  .w3-btn:disabled,
+  .w3-button:disabled {
+    cursor: not-allowed;
+    /* opacity: 0.3; */
+    box-shadow: none;
+    background-color: #000 !important;
+  }
+
+  .w3-button.w3-disabled:hover,
+  .w3-button:disabled:hover {
+    cursor: not-allowed;
+    /* opacity: 0.3; */
+    box-shadow: none;
+    color: #fff !important;
+    background-color: #000 !important;
+  }
+
+  .white-on-dark img,
+  .white-on-dark.mermaid {
+    background-color: #fff !important;
+  }
 }
